Multiple bug Fixes
Fixed Settings Dialogue not showing.
Dynamic-ish Play/Pause Button. Using Font Awesome instead of Unicode.

--- a/css/settings.css
+++ b/css/settings.css
@@ -7,8 +7,10 @@ a.show_settings{
     right: calc(5vw - 12pt);
 	z-index: 9999;
 }
-a.show_settings:hover{
+a.show_settings:hover,
+button[action=PlayPauseAudio] {
     color: #8eeda8;
+	transition: 300ms;
 }
 
 
